--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>index html</title>
 </head>
 <body>
-    
+    <p>hey this is a new index file</p>
+    <p>adding second paragrph</p>
 </body>
 </html>
 
