--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>hey this is a new index file</p>
     <p>adding second paragrph</p>
+    <p>hey this is 3rd para</p>
 </body>
 </html>
 
